<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CategoryActivity">

    <TextView
        android:id="@+id/CategoryTitleTextViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Category"
        android:textColor="@color/Green"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/WaterButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="@drawable/background_category"
        android:onClick="WaterNameButtonClicked"
        android:padding="25dp"
        android:text="@string/Water"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoryTitleTextViewActivity" />

    <Button
        android:id="@+id/SeedsButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_category"
        android:onClick="SeedsNameButtonClicked"
        android:padding="25dp"
        android:text="@string/Seeds"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FruitesAndVegetablesButton" />

    <Button
        android:id="@+id/FruitesAndVegetablesButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_category"
        android:onClick="FAndVNameButtonClicked"
        android:padding="25dp"
        android:text="@string/FAndV"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WaterButton" />

    <Button
        android:id="@+id/ToolsButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_category"
        android:onClick="ToolsNameButtonClicked"
        android:padding="25dp"
        android:text="@string/Tools"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SeedsButton" />
</androidx.constraintlayout.widget.ConstraintLayout>